adding regex in getMultipleChar function
