# openapi.yaml
@@ -7,7 +7,7 @@ servers:
 - url: https://localhost:5000/api/v1/character
 tags:
 - name: character
-  description: this endpoint handle all request about Character data from Rick & Morty API
+  description: this endpoint handle all request about Character data from Rick & Morty API and Postgres DB
   
 paths:
   /:
@@ -29,9 +29,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/SuccessCharacterPost'
         400:
-          $ref:
-            
+          $ref: '#/components/responses/ErrorBadRequest'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalError'
+          
+    /listofcharacters/{numberOfChar}:
+      get:
+        tags:
+          - charcater
+        summary: retrieve a list of N Characters with the following data "name", "status", "species" and "origin" from Rick & Morty API
+        parameters:
+        - numberofChar: numberOfChar
+          
 components:
+  responses:
+    ErrorBadRequest:
+      description: Bad Request. all Character's fields are required.
+    NotFound:
+      description: Character not found.
+    InternalError:
+      description: Internal Error. The server has encountered a situation it does not know how to handle.
+
   schemas:
     BodyCharacterPost:
       type: object
@@ -57,5 +77,5 @@ components:
           description: Flag indicates if service call was succesful
         id:
           type: integer
-          enum: [222]
+          enum: [2]
           description: New character's id saved in Postgres DB
